# smartace

./: .gitignore  CMakeLists.txt  README.md
cmake/: EthCompilerSettings.cmake  EthOptions.cmake  FindZ3.cmake  McOptions.cmake  SmartAceOptions.cmake  jsoncpp.cmake
cmodelres/: CMakeLists.txt  Interactive.cmake  Klee.cmake  LibFuzzer.cmake  Seahorn.cmake
cmodelres/yaml/: sea.bv.yaml  sea.cex.yaml  sea.common.yaml  sea.nila.yaml  sea.nlia.yaml
docker/: README.md  smartace-build-core.Dockerfile  smartace-build-klee.Dockerfile  smartace.Dockerfile
libsolidity/: CMakeLists.txt
libsolidity/modelcheck/: ADTConverter.cpp  ADTConverter.h  ADTForwardDeclVisitor.cpp  ADTForwardDeclVisitor.h  ASTForwardDeclVisitor.cpp  ASTForwardDeclVisitor.h  BlockConversionVisitor.cpp  BlockConversionVisitor.h  BlockConverter.cpp  BlockConverter.h  BlockToModelVisitor.cpp  BlockToModelVisitor.h  CallState.cpp  CallState.h  Contract.cpp  Contract.h  ContractValidator.h  ExpressionConversionVisitor.cpp  ExpressionConversionVisitor.h  ExpressionConverter.cpp  ExpressionConverter.h  Function.cpp  Function.h  FunctionBlockConverter.cpp  FunctionConverter.cpp  FunctionConverter.h  FunctionDefinitionGenerator.cpp  FunctionDefinitionGenerator.h  FunctionForwardDeclVisitor.cpp  FunctionForwardDeclVisitor.h  GeneralBlockConverter.cpp  MainFunctionGenerator.cpp  MainFunctionGenerator.h  MainFunction_1.cpp  MainFunction_1.h  (+24 more)
libverify/: CMakeLists.txt  assert_interactive.c  assert_interactive.cpp  assert_seahorn.c  nd_interactive.c  nd_interactive.cpp  sol_verify_h_generator.cpp  verify.h  verify_interactive.cpp  verify_klee.c  verify_libfuzzer.cpp  verify_seahorn.c
scripts/: human_readable_cmodel.sh  ilibverifytest.sh
solc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h
test/: CMakeLists.txt
test/libsolidity/modelcheck/: ADTConversionTests.cpp  ASTForwardDeclTests.cpp  ASTUtilTests.cpp  AllocationSiteAnalysisTests.cpp  BlockConversionTests.cpp  BlockToModelTest.cpp  CGeneratoTests.cpp  CallGraphTests.cpp  CallStateTests.cpp  CallStateUtilTests.cpp  ContractDependanceTests.cpp  EndToEndTests.cpp  ExpressionConversionTests.cpp  FunctionAnalysisTests.cpp  FunctionConverterTests.cpp  FunctionDefinitionGeneratorTests.cpp  FunctionUtilTests.cpp  InheritanceTests.cpp  MainFuntion_1Tests.cpp  MainFuntion_2Tests.cpp  MainFuntion_3Tests.cpp  MapDeflateTests.cpp  MapDepthCalculatorTests.cpp  MapIndexAnalysisTest.cpp  PrimitiveTypeTests.cpp  TypeClassificationTests.cpp  TypeTranslatorTest.cpp  UtilityTests.cpp  VariableScopeResolverTests.cpp
test/libsolidity/modelcheck/analysis/: AbstractAddressDomainTests.cpp  AllocationSitesTests.cpp  AnalysisStackTests.cpp  CallGraphTests.cpp  CallStateTests.cpp  ContractRvAnalysis.cpp  ContractRvAnalysisTests.cpp  FunctionCallTests.cpp  InheritanceTests.cpp  LibraryTests.cpp  MappingTests.cpp  PrimitivesTests.cpp  StructureTests.cpp  TaintAnalysisTests.cpp  TightBundleTests.cpp  TypeNamesTests.cpp  VariableScopeTests.cpp
test/libsolidity/modelcheck/cli/: BundleTests.cpp
test/libsolidity/modelcheck/codegen/: DetailsTests.cpp
test/libsolidity/modelcheck/model/: ADTTests.cpp  BlockTests.cpp  EtherTests.cpp  ExpressionTests.cpp  FunctionTests.cpp  MappingTests.cpp  NondetSourceRegistryTest.cpp
test/libsolidity/modelcheck/utils/: ASTTests.cpp  AbstractAddressDomainTests.cpp  CallStateTests.cpp  ContractTests.cpp  EtherTests.cpp  FunctionTests.cpp  GeneralTests.cpp  KeyIteratorTests.cpp  LibVerifyTests.cpp  NamedTests.cpp  PrimitiveTests.cpp  TypesTests.cpp
test/regression/: lit.cfg
test/regression/fuzzer/: basic.sol  basic_fail.sol  basic_pass.sol  big_int.sol
test/regression/interactive/: 1_map.sol  3_map.sol  balance.sol  basic.sol  binary_incr.sol  can_build_sum.sol  contract_address.sol  deep_map.sol  enums.sol  fail_by_init_blocknum.sol  fail_by_init_sender.sol  fail_by_init_value.sol  interference_vars.sol  interleavings.sol  lockstep.sol  modifier_arg.sol  modifier_ctor.sol  modifier_iterative.sol  modifier_noarg.sol  modifier_retval.sol  multicontract.sol  multimodel.sol  nested_contract.sol  origin.sol  pay_to_contract.sol  private_call.sol  syntactic_sugar.sol  value_calls.sol
test/regression/inv/: inv_checked.sol  inv_rolebased_fail.sol  inv_rolebased_no_roles.sol  inv_rolebased_pass.sol  inv_structure.sol  inv_types.sol  library_inv.sol
test/regression/klee/: basic_fail.sol  basic_pass.sol
test/regression/synth/: auction_fail.sol  auction_pass.sol  stateful_fail.sol  stateful_pass.sol  stateless_fail.sol  stateless_pass.sol  struct_fail.sol  struct_pass.sol  trivial.sol
test/regression/tutorials/: 2_fuzz.sol  2_mc.sol  3_buggy.sol  3_fixed.sol  4_ex.sol
test/regression/verify/: addr_of_retval.sol  bad_inheritance.sol  bal_of_retval.sol  basic.sol  binary_incr.sol  call_on_retval.sol  complex_inheritance_1.sol  complex_inheritance_2.sol  complex_inheritance_3.sol  complex_inheritance_4.sol  complex_inheritance_5.sol  concrete_addrs.sol  contract_const_alias.sol  contract_const_alias_mixed.sol  contract_model.sol  contract_pass.sol  crypto_eq.sol  crypto_neq.sol  def_rv_is_zero.sol  default_from_mg.sol  defensive_fails.sol  defensive_pass.sol  diamond_inheritance_1.sol  diamond_inheritance_2.sol  distinct_literals.sol  emit_error.sol  enum_cast.sol  escalate_reqs.sol  ext_call_casts.sol  fallback.sol  forward_address_fail_a..sol  forward_address_fail_a.sol  forward_address_fail_b.sol  forward_address_pass.sol  func_to_lib.sol  getters.sol  handles_global_contracts.sol  handles_reentrance_failure.sol  inheritance.sol  inheritance_override_choice_1.sol  (+48 more)
test/regression/verify/securify/: README.md
test/regression/verify/securify/input_validation/: MissingInputValidation.sol  README.md  TODAmount.sol  TODReceiver.sol  TODTransfer.sol  UnrestrictedWrite.sol  decompile.sol  reentrancy2.sol
test/tools/: CMakeLists.txt  ilibverifytest.c  ilibverifytest.cpp
tutorials/: 1_installation.md  2_getting_started.md  3_monitor.gv  3_transactions.md  4_arbitrary_clients.md  5_client_data.md  5_four_process.gv  5_one_process.gv
(+135 files in other folders)
